codex-exp: iteration 3