@@ -1,12 +1,7 @@
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-final class Graph {
-    private final int vertexCount;
-    private final List<Edge> edges;
-
-    Graph(int vertexCount, List<Edge> edges) {
+record Graph(int vertexCount, List<Edge> edges) {
+    Graph {
         if (vertexCount < 0) {
             throw new IllegalArgumentException("Vertex count must be non-negative.");
         }
@@ -14,9 +9,8 @@ final class Graph {
             throw new IllegalArgumentException("Edges must not be null.");
         }
 
-        this.vertexCount = vertexCount;
-        this.edges = Collections.unmodifiableList(new ArrayList<>(edges));
-        validateEdges();
+        edges = List.copyOf(edges);
+        validateEdges(vertexCount, edges);
     }
 
     static Graph fromEdgeMatrix(int vertexCount, int[][] rawEdges) {
@@ -24,29 +18,19 @@ final class Graph {
             throw new IllegalArgumentException("Edges must not be null.");
         }
 
-        List<Edge> edges = new ArrayList<>(rawEdges.length);
-        for (int[] row : rawEdges) {
-            edges.add(Edge.fromMatrixRow(row));
-        }
-        return new Graph(vertexCount, edges);
+        return new Graph(vertexCount, java.util.Arrays.stream(rawEdges)
+            .map(Edge::fromMatrixRow)
+            .toList());
     }
 
-    int vertexCount() {
-        return vertexCount;
-    }
-
-    List<Edge> edges() {
-        return edges;
-    }
-
-    private void validateEdges() {
+    private static void validateEdges(int vertexCount, List<Edge> edges) {
         for (Edge edge : edges) {
-            validateVertex(edge.from());
-            validateVertex(edge.to());
+            validateVertex(edge.from(), vertexCount);
+            validateVertex(edge.to(), vertexCount);
         }
     }
 
-    private void validateVertex(int vertex) {
+    private static void validateVertex(int vertex, int vertexCount) {
         if (vertex < 0 || vertex >= vertexCount) {
             throw new IllegalArgumentException(
                 "Vertex " + vertex + " is out of bounds for graph with " + vertexCount + " vertices."
